--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /Task1_6/cmake-build-debug/
 /Task2_6/cmake-build-debug/
 /Task3_6/cmake-build-debug/
+/build-Task4_6-Desktop_Qt_6_5_0_MinGW_64_bit-Debug
