--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 /Task2_6/cmake-build-debug/
 /Task3_6/cmake-build-debug/
 /build-Task4_6-Desktop_Qt_6_5_0_MinGW_64_bit-Debug
+/build-replaceSynonymsTest-Desktop_Qt_6_5_0_MinGW_64_bit-Debug
